--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
 
                 <div class="control-group">
                     <label>Number of Nests</label>
-                    <input type="number" id="nestCount" min="1" max="8" value="3">
+                    <input type="number" id="nestCount" min="1" max="12" value="12">
                 </div>
 
                 <div class="stats">
@@ -651,7 +651,8 @@
                         <strong>Algorithm:</strong> Steady-state genetic algorithm with roulette wheel selection<br>
                         <strong>Representation:</strong> Real-valued coordinates for bomb positions<br>
                         <strong>Fitness:</strong> Weighted kill count based on distance and ant population<br>
-                        <strong>Termination:</strong> Fixed number of generations (100 by default)
+                        <strong>Termination:</strong> Fixed number of generations (100 by default)<br>
+                        <strong>Nests:</strong> 12 ant nests with varying populations (100-967 ants)
                     </p>
                 </div>
             </div>
